--- a/views/admin/editCategory.hbs
+++ b/views/admin/editCategory.hbs
@@ -2,6 +2,6 @@
   <form action="/admin/editCategory?id={{category._id}}" method="post">
   <label for="category"></label><br>
       <input type="text" class="form-control" name="category" value={{category.category}}>
-      <button type="submit" class="betaButton mt-1 ml-auto" style="text-decoration: none ; color:black">Update Category</button>
+      <button type="submit" class="betaButton mt-1 ml-auto" style="text-decoration: none ;">Update Category</button>
   </form>
 </section>
