--- a/views/admin/salesReport.hbs
+++ b/views/admin/salesReport.hbs
@@ -1,4 +1,4 @@
-<section style="padding-bottom: 1rem;">
+<section style="padding-bottom: 1rem;" class="sr">
   <div class="row">
     <div class="container-flex pt-4 px-4">
       <div class="g-4">
@@ -71,6 +71,30 @@
       <h6 class="mb-0">{{no}}</h6>
     </div>
   </div>
+  {{!--  --}}
+  <table class="table table-bordered" id="userTable" style="display: none;">
+                <thead>
+                    <tr>
+                    <th>Date</th>
+                    
+                    <th style="width: 171.325px;;">Status</th>
+                    <th>Amount</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    {{#each orders}}
+                    <tr>
+                        <td>{{this.date}}</td>
+                        
+                        <td>
+                        {{this.status}}
+ 
+                        </td>
+                        <td>{{this.totalAmount}}</td>
+                   </tr>
+                    {{/each}}
+                </tbody>
+            </table>
 </section>
 
 <script src="https://cdn.jsdelivr.net/npm/chart.js/dist/chart.min.js"></script>
