--- a/views/partials/admin-sidebar.hbs
+++ b/views/partials/admin-sidebar.hbs
@@ -31,14 +31,8 @@
                     <a href="/admin/products" class="nav-item nav-link"><i class="fa fa-cart-arrow-down me-2"></i>Products</a>
                     <a href="/admin/all-orders" class="nav-item nav-link"><i class="fa fa-table me-2"></i>Orders</a>
                     <a href="/admin/sales-report" class="nav-item nav-link" style="cursor: pointer;"><i class="fa fa-chart-bar me-2"></i>Sales report</a>
-                    {{!-- <div class="nav-item dropdown">
-                        <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown"><i class="far fa-file-alt me-2"></i>Pages</a>
-                        <div class="dropdown-menu bg-transparent border-0">
-                            <a href="signin.html" class="dropdown-item">Sign In</a>
-                            <a href="404.html" class="dropdown-item">404 Error</a>
-                            <a href="blank.html" class="dropdown-item">Blank Page</a>
-                        </div>
-                    </div> --}}
+                    <a href="/admin/coupons" class="nav-item nav-link" style="cursor: pointer;"><i class="fa fa-tag fa-lg me-2"></i>Coupons</a>
+                   
                 </div>
             </nav>
         </div>
