--- a/views/user/orders.hbs
+++ b/views/user/orders.hbs
@@ -4,7 +4,7 @@
   <thead>
     <tr>
      
-     
+      <th scope="col">Date</th>
       <th scope="col">Amount</th>
      
       <th scope="col">Status</th>
@@ -19,7 +19,7 @@
     <tr>
      
     
-
+      <td scope="row">{{this.date}}</td>
       <td scope="row">{{this.totalAmount}}</td>
    
       <td scope="row"  id="status{{this._id}}" >{{this.status}}</td>
