--- a/views/layout/layout.hbs
+++ b/views/layout/layout.hbs
@@ -113,7 +113,8 @@ https://cdn.datatables.net/buttons/2.2.3/js/buttons.print.min.js
         dom: 'Bfrtip',
         buttons: [
           'copy', 'csv', 'excel', 'pdf', 'print'
-        ]
+        ],
+        "ordering":false
       });
     });
   </script>
