--- a/views/user/view-products.hbs
+++ b/views/user/view-products.hbs
@@ -193,7 +193,9 @@
         </div>
 </div>
 
-
+<div class="alert-box" id="alert-box">
+        <h3><strong id="alert-text"></strong></h3>
+    </div>
 
 
  
