--- a/views/admin/coupons.hbs
+++ b/views/admin/coupons.hbs
@@ -3,8 +3,8 @@
     {{!-- <a href="/admin/add-category"class=" betaButton mt-1 ml-auto" style="text-decoration: none ; color:black">Add Category</a> --}}
     <section class="category">
   <form action="/admin/coupons" method="post">
-      <input type="text" class="form-control" name="coupon" placeholder="Add coupon...">
-      <input type="text" class="form-control" name="off" placeholder="Offer for coupon...">
+      <input type="text" class="form-control" name="coupon" placeholder="Add coupon..." required>
+      <input type="number" class="form-control" name="off" placeholder="Offer for coupon..." required>
       <button type="submit"  class="betaButton mt-1 ml-auto" style="text-decoration: none ; ">Add Coupon</button>
   </form>
 </section>
