form validations after hosting

--- a/views/admin/manageCategory.hbs
+++ b/views/admin/manageCategory.hbs
@@ -4,7 +4,7 @@
     <section class="category">
   <form action="/admin/add-category" method="post">
   <label for="category"></label><br>
-      <input type="text" class="form-control" name="category" placeholder="Add category...">
+      <input type="text" class="form-control" name="category" placeholder="Add category..." required>
       <button type="submit"  class="betaButton mt-1 ml-auto" style="text-decoration: none ; ">Add Category</button>
   </form>
 </section>
