--- a/views/admin/editCategory.hbs
+++ b/views/admin/editCategory.hbs
@@ -1,7 +1,7 @@
 <section class="category">
   <form action="/admin/editCategory?id={{category._id}}" method="post">
   <label for="category"></label><br>
-      <input type="text" class="form-control" name="category" value={{category.category}}>
+      <input type="text" class="form-control" name="category" value={{category.category}} required>
       <button type="submit" class="betaButton mt-1 ml-auto" style="text-decoration: none ;">Update Category</button>
   </form>
 </section>
