--- a/views/user/placeorder.hbs
+++ b/views/user/placeorder.hbs
@@ -72,9 +72,10 @@
                 </div>
             </div>
         </form>
-         <form action="/verifyCoupon" method="post" style="width: 25rem;    margin-bottom: -1rem;
-    margin-top: -3rem;
-    margin-right: 3rem;" class="float-right">
+         <form action="/verifyCoupon" method="post" style="    width: 25rem;
+    margin-bottom: -1rem;
+    margin-top: -22rem;
+    margin-right: -14rem;" class="float-right">
   <label for="Add coupon">Add Coupon</label><br>
       <input type="text" class="form-control" name="coupon" style="width: 15rem; display: inline-block;" placeholder="Add Coupon...">
       <button type="submit" class="betaButton mt-1 ml-auto" style="text-decoration: none ;">Add Coupon</button>
