--- a/views/user/placeorder.hbs
+++ b/views/user/placeorder.hbs
@@ -72,6 +72,7 @@
                 </div>
             </div>
         </form>
+        {{!-- changes made --}}
          <form action="/verifyCoupon" method="post" style="    width: 25rem;
     margin-bottom: -1rem;
     margin-top: -22rem;
